# my_FaMe

./: .gitignore  Makefile  README.md  multi_listener.py  solo_listener.py
fame-modeler/: README.md  lib
fame-modeler/fame-modeler/: call_activity_modeler.html  index.html  modeler.html  viewer.html
fame-modeler/fame-modeler/descriptors/: callActivity.json  dataObject.json  qos.json  signalData.json
fame-modeler/fame-modeler/src/: modeler.js  viewer.js
fame-modeler/fame-modeler/utils/: ElementUtil.js  EventDefinitionUtil.js  ExtensionElementsUtil.js  QoSCheck.js  ROSconnect.js
fame-modeler/test/spec/: SimulationSpec.js
fame_agricultural/: CMakeLists.txt  README.md  package.xml
fame_agricultural/env-hooks/: fame_agricultural.sh.in
fame_agricultural/launch/: multi_launch.py  spawn_elements.py  spawn_elements_CATS.py
fame_agricultural/models/: README.md
fame_agricultural/models/terrain/: model.config  model.sdf
fame_agricultural/models/terrain/materials/scripts/: terrain.material
fame_agricultural/models/weed/: model.config  model.sdf
fame_agricultural/models/weed/materials/scripts/: weed.material
fame_agricultural/models/weed/meshes/: weed.dae
fame_agricultural/robot_description/: Drone.sdf  Tractor.sdf
fame_agricultural/src/: replace.py
fame_agricultural/worlds/: agriculture.world
fame_engine/: CMakeLists.txt  README.md  package.json
fame_engine/launch/: husky_tello.py  my_CATS.py  tello.py
fame_engine/process/: Tractor_1.bpmn  Tractor_1_CATS.bpmn  diagram(3).bpmn  diagram(4).bpmn  diagram(5).bpmn  hello_world.bpmn  husky_a300.bpmn  husky_a300_BaF.bpmn  husky_a300_GPT.bpmn  husky_a300_GPT_mine.bpmn  husky_a300_L.bpmn  husky_a300_L_move.bpmn  husky_a300_L_move_bis.bpmn  husky_a300_line.bpmn  husky_a300_odom.bpmn  husky_a300_odom_GPT.bpmn  husky_a300_rect.bpmn  husky_a300_rect_bis.bpmn  husky_a300_rect_odom.bpmn  husky_a300_rect_odom_2.bpmn  husky_a300_rect_odom_3.bpmn  husky_a300_rect_odom_4.bpmn  husky_a300_rect_odom_5.bpmn  husky_a300_rect_wrong.bpmn  husky_a300_rostimer.bpmn  husky_a300_tello.bpmn  husky_a300_tello_slow.bpmn  husky_a300_tello_slow_2.bpmn  husky_a300_tello_slow_odom(2).bpmn  husky_a300_tello_slow_odom.bpmn  husky_a300_turn.bpmn  husky_a300_while.bpmn  husky_turn_around.bpmn  if_cond.bpmn  ping_pong.bpmn  say_call.bpmn  tello.bpmn  tello_2.bpmn  tello_7.bpmn  tello_7_new.bpmn
fame_engine/process/say_something/: husky.bpmn  tello.bpmn
fame_engine/src/: controller.js  splitter.js
fame_simulation/: CMakeLists.txt  README.md  package.xml
fame_simulation/launch/: multi_launch.py  spawn_elements.py
fame_simulation/robot_description/: smart_car.sdf  tractor.sdf
fame_simulation/worlds/: empty.world
